mbari-org/vars-feedback#90 - trying to build on JDK 21